# year1_game

./: .gitignore  CMakeLists.txt  README.md
CW_practice/: ActorMovementComponent.h  Animation.cpp  Animation.h  Bullet.cpp  Bullet.h  Entity.cpp  Entity.h  EntityComponentManager.cpp  EntityManager.cpp  Game.h  LevelSystem.cpp  LevelSystem.h  Mage.cpp  Mage.h  MageStats.h  PauseMenu.cpp  PauseMenu.h  Ship.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_player_movement.cpp  cmp_player_movement.h  main.cpp  maths.h  ship.cpp
Pac_Man/: EntityManager.cpp  EntityManager.h  entity.cpp  entity.h  ghost.cpp  ghost.h  main.cpp  pacman.cpp  pacman.h  player.cpp  scene.h  system_renderer.cpp  system_renderer.h
Space invaders/: spacei nvaders.cpp
Space_invaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h  space invaders.cpp
Tile_Engine/: Entity.cpp  Entity.h  LevelSystem.cpp  LevelSystem.h  main.cpp  player.cpp  player.h
lib_maths/: maths.h
practical_1/: main.cpp
res/levels/: level_1.txt  level_2.txt  level_3.txt
set09121_CW/: actors.cpp  actors.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_sprite.cpp  cmp_sprite.h  game.cpp  game.h  main.cpp  scene.h  system_renderer.h
